--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ src/__pycache__/facedetection.cpython-37.pyc
 src/__pycache__/facelandmarks.cpython-37.pyc
 src/__pycache__/gazeestimation.cpython-37.pyc
 .gitignore
+src/__pycache__/facedetection.cpython-37.pyc
+src/__pycache__/facelandmarks.cpython-37.pyc
+src/__pycache__/gazeestimation.cpython-37.pyc
+src/__pycache__/headposeestimation.cpython-37.pyc
+src/__pycache__/model.cpython-37.pyc
+src/__pycache__/utils.cpython-37.pyc
