--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ numpy==1.17.4
 Pillow==6.2.1
 requests==2.22.0
 virtualenv==16.7.9
+opencv-python==4.2.0.32
+opencv-python-headless==4.3.0.36
+PyAutoGUI==0.9.48
+line-profiler==2.1.2
